# netatmo

./: .gitignore  setup.cfg
netatmo_page/: manage.py
netatmo_page/home/: urls.py  views.py
netatmo_page/home/templates/home/: home.html  index.html  module.html  plot.html  room.html  schedule.html
netatmo_page/netatmo_page/: asgi.py  settings.py  urls.py  wsgi.py
netatmo_page/static/css/: style.css
src/: __init_.py
src/netatmo/: netatmo_flask.py
src/netatmo/dataModel/: homes.py  items.py  modules.py  netatmo_data.py  rooms.py  schedules.py  zones.py
src/netatmo/netatmo_api/: netatmo_api.py  netatmo_secrets.py  netatmo_tokens.py
src/netatmo/static/: style.css
src/netatmo/temperature/: download_from_chmu.py  load_gas_consumption.py  process_temp.py
src/netatmo/templates/: home.j2  index.j2  module.j2  plot.j2  room.j2  schedule.j2
