[metadata]
name = netatmo-modulating-thermostat
version = 1.0.0
author = Wojciech Pribula
description = Monitoring tool for Netatmo Modulating Thermostat.
keywords = netatmo, modulating, thermostat

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    Flask
    matplotlib
    numpy
    pandas
    requests
python_requires = >=3.8

[options.packages.find]
where = src

[options.package_data]
* = 
    *.j2
    *.css
    *.png

[options.exclude_package_data]
* =
    *.json
    *.csv

[options.entry_points]
console_scripts =
    executable-name = netatmo.netatmo_flask:main

